--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: logoFont;
+  src: url(./fonts/RemachineScript_Personal_Use.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Palanquin', sans-serif;
 }
 
 header {
@@ -25,5 +31,68 @@ header {
 }
 
 .nav {
+  width: 20%;
   display: flex;
+  justify-content: space-around;
+}
+
+.nav li{
+  list-style-type: none;
+  padding: 9px;
+  border-radius: 50px;
+}
+.nav li a{
+  font-size: 19px;
+  text-decoration: none;
+  color:black;
+}
+.nav li:hover{
+  background-color: rgb(255, 218, 224);
+}
+.container{
+  height: 100%;
+  padding: 5%;
+  font-size: 20px;
+}
+.row1{
+  display: flex;
+  justify-content:space-between;
+  height: 30%;
+}
+
+
+.col{
+  display: flex;
+  margin: 10px;
+  border-radius: 15px;
+  padding: 30px;
+  width: 47%;
+  background-color: rgb(255, 229, 229);
+  display: flex;
+  align-items: flex-start;
+  align-content: space-between;
+}
+
+.col2{
+  width: 60%;
+  display: flex;
+  align-items: flex-start;
+  align-content: space-between;
+}
+
+.box{
+  padding: 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.image,.col  img{
+  width: 100%;
+  max-height: 100%;
+}
+
+#logo{
+  padding: 10%;
 }
